2002-05-15  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: return TRUE for the app_delete callback. 
	Should fix the crash on exit once and for all - bug #69493

2002-05-14  Anders Carlsson  <andersca@gnu.org>

	* prettytable.c: (pretty_table_new):
	Use the new multi-screen safe API.
	
2002-05-06  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am, interface.c: get help working with patch by
	John Fleck. Fixes bug #80639

2002-04-28 Dennis Cranston <dennis_cranston@yahoo.com>

	* callbacks.c:  add procman.png as the logo for the about 
	dialog.  change name to match the name in the application
	menu.

Mon Apr 29 11:44:14 2002  Owen Taylor  <otaylor@redhat.com>

	* interface.c (file1_menu_uiinfo): GNOMEUIINFO_MENU_EXIT_ITEM
	seems to have been recently deprecated; change to
	QUIT_ITEM, the current name.

2002-03-19  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: reflect change in binary name in gnome_init

	* callbacks.c: delete_event returns a gboolean. May fix the
	crash on exits

	* proctable.c: add some debug spew to catch some of the crashses
	reported

2002-03-06  Zbigniew Chyla  <cyba@gnome.pl>

	* proctable.c (proctable_new): Translate column names.

2002-02-26  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: if the selected process is removed then
	NULL it. Fixes bug #70520

	* infoview.c: set the infoview tab unsensitive if
	the selected process is NULL

2002-02-24  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: add the icon to the hash table always so the icons aren't
	lost when the tree is recreated

2002-02-22  Kjartan Maraas  <kmaraas@gnome.org>

	* procman.c: Remove unsupported #ifdef ENABLE_NLS stuff.
	
2002-02-17  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: don't set the icon on app creation if an icon
	already exist since there was some funny business going on with
	the panel and applets

2002-02-12  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: clean up the icon mess. Icons should now
	get added properly.
