@@ -1,3 +1,7 @@
+2002-05-19  Kevin Vandersloot <kfv101@psu.edu>
+
+	* proctable.c: remove hack to catch bug that was a treeview bug
+
 2002-05-15  Kevin Vandersloot <kfv101@psu.edu>
 
 	* callbacks.c: return TRUE for the app_delete callback. 
